# relicheck

./: .gitignore  .htaccess  360-surveys.html  360-wizard.php  404.html  AGENTS.md  CLAUDE.md  HANDOFF_2B3.md  HANDOFF_3B.md  HANDOFF_3C.md  HANDOFF_3D.md  HANDOFF_3E.md  HANDOFF_3F.md  HANDOFF_4A.md  HANDOFF_4B.md  HANDOFF_4C.md  HANDOFF_4E.md  HANDOFF_IS_STUDIO.md  HANDOFF_MM_STUDIO_2026-06-05.md  HANDOFF_MM_STUDIO_V4.md  HANDOFF_NEXT_SESSION.md  HANDOFF_QUAL_SESSION.md  HANDOFF_QUAL_STUDIO.md  HANDOFF_RSSI_DESIGN.md  HANDOFF_SESSION_2026_06_02.md  HANDOFF_SESSION_2026_06_02b.md  HANDOFF_SESSION_2026_06_02c.md  HANDOFF_SESSION_2026_06_02d.md  HANDOFF_SESSION_2026_06_02e.md  HANDOFF_SESSION_2026_06_02f.md  HANDOFF_SURVEY_BUILDER_V2_2026-06-05.md  KNOWN_ISSUES.md  MM-Studio-Bible.md  MM-Studio-RESTYLE-BRIEF.md  MM-Studio-rebuild-plan.docx  MM-Studio-rebuild-plan.md  PURPOSE_ANALYSIS.md  ReliCheck-Project-Memory.docx  Relicheck-Math-grade8.xlsx  Relicheck-Reading-grade8.xlsx  (+313 more)
_phase3_handoff/: PHASE_2_INSTALL.md  PHASE_3_INSTALL.md
_phase3_handoff/engine/: pyproject.toml
_phase3_handoff/engine/mm_engine/: __init__.py  ingest.py  ipc.py  suggest.py  tests.py
_phase3_handoff/engine/tests/: test_ingest.py  test_parity.py
_phase3_test_data/: sample.csv  sample.dta  sample.json  sample.sav  sample.tsv  sample.xlsx  sample_multisheet.xlsx
_phase4_handoff/: PHASE_4_INSTALL.md
_phase5_handoff/: PHASE_5_INSTALL.md
ai/: before-you-collect.html  principles.html  when-you-report.html  while-you-analyze.html  while-you-collect.html
api/: .htaccess  _admin.php  _ai.php  (+50 more)
(+861 files in other folders)
